framec_tests/language_specific/python/v3_facade_smoke/negative/strict_unterminated_string.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B(1)
                x = 'unterminated
            }
        }
        $B {
        }
}

